[metadata]
name = Relic-SGA-Tool-ModernMAK
version = 2022.0-a1

author = Marcus Kertesz
; author_email = author@example.com
description = A tool for unpacking and extracting SGA archives.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ModernMAK/Relic-SGA-Archive-Tool
project_urls =
    Bug Tracker = https://github.com/ModernMAK/Relic-SGA-Archive-Tool/issues
classifiers =
    Programming Language :: Python :: 3
;    License :: OSI Approved :: MIT License
;    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9

scripts =
    src/scripts/fda2audio.py
install_requires =
    archive-tools-ModernMAK @ git+https://github.com/ModernMAK/ArchiveTools@f08f5e34c96cfcf5d45b47b86b44ca8d1bc03ae4


[options.packages.find]
where = src