[metadata]
name = relic-game-tool-ModernMAK
version = 2022.0-a6

author = Marcus Kertesz
; author_email = author@example.com
description = A tool for unpacking and extracting SGA archives.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ModernMAK/Relic-SGA-Archive-Tool
project_urls =
    Bug Tracker = https://github.com/ModernMAK/Relic-SGA-Archive-Tool/issues
classifiers =
    Programming Language :: Python :: 3
;    License :: OSI Approved :: MIT License
;    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9


install_requires =
    archive-tools-ModernMAK

[options.entry_points]
console_scripts =
    relic = scripts.universal.universal:main

[options.packages.find]
where = src