[metadata]
name = relic-game-tool
version = 2022.0-rc0

author = Marcus Kertesz
; author_email = author@example.com
description = A library for unpacking and extracting Relic SGA and Relic Chunky files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ModernMAK/Relic-Game-Tool
project_urls =
    Bug Tracker = https://github.com/ModernMAK/Relic-Game-Tool/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
;    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9


install_requires =
    mak-serialization-tools

[options.entry_points]
console_scripts =
    relic = scripts.universal.universal:main

[options.packages.find]
where = src